[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-dify"
version = "0.1.0"
description = "A Nonebot plugin for interacting with Dify"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "gsskk", email = "your.email@example.com" }
]
license = { file = "LICENSE" }  # 许可证文件

# 项目的分类
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# 项目的依赖项
dependencies = [
    "nonebot-plugin-alconna>=0.50.2",
    "httpx>=0.27.0"
]

[project.urls]
"Homepage" = "https://github.com/gsskk/nonebot-plugin-dify"
"Documentation" = "https://github.com/gsskk/nonebot-plugin-dify/blob/main/README.md"
"Issue Tracker" = "https://github.com/gsskk/nonebot-plugin-dify/issues"

[tool.setuptools.packages.find]
packages = ["nonebot_plugin_dify"]
